[project]
name = "post-symbolic-sovereign-core"
version = "0.16.0"
description = "LITA v16: A Post-Symbolic AI engine using dynamic attention hooks and discrete protocols."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "accelerate>=0.20.0",
    "sentencepiece",
]

[tool.uv]
managed = true
